test/Fail/AnonymousRecConstrData.agda
module AnonymousRecConstrData where

data Foo : Set where

_ = Foo.constructor
