test/Fail/AnonymousRecConstrData.err
AnonymousRecConstrData.agda:5.5-20: error: [ConstructorNameOfNonRecord]
Only record types have constructor names, but Foo is a data type.
when scope checking Foo.constructor
